--- a/Project4.vcxproj.filters
+++ b/Project4.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="backup.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="gui.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="songs_set.csv" />
